# meetmind

./: .gitignore  .gitleaks.toml  CLAUDE.md  README.md  failed_log.txt  failed_log_robust.txt  successful_workflow.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-website.yml  drift-detection.yml  flutter-ci.yml  flutter-release.yml  security-scan.yml  terraform-apply.yml  terraform-ci.yml
backend/: .env.example  .trivyignore  Caddyfile  Dockerfile  README.md  REVISION  docker-compose.prod.yml  pyproject.toml
backend/scripts/: test_e2e.py
backend/src/meetmind/: __init__.py  main.py
backend/src/meetmind/agents/: analysis_agent.py  copilot_agent.py  screening_agent.py  summary_agent.py
backend/src/meetmind/api/: handlers.py  meeting_api.py  websocket.py
backend/src/meetmind/config/: logging.py  settings.py
backend/src/meetmind/core/: __init__.py  auth.py  embeddings.py  speaker_tracker.py  storage.py  transcript.py
backend/src/meetmind/providers/: base.py  bedrock.py  diarization.py  factory.py  moonshine_stt.py  openai_provider.py  parakeet_stt.py  qwen_stt.py  streaming_stt.py  whisper_stt.py
backend/src/meetmind/security/: __init__.py
backend/src/meetmind/templates/: meeting_summary.html
backend/src/meetmind/utils/: compressor.py  cost_tracker.py  email_service.py  response_cache.py
backend/tests/: test_analysis_agent.py  test_ask_aura.py  test_auth_flow.py  test_bedrock.py  test_compressor.py  test_copilot_agent.py  test_cost_tracker.py  test_diarization.py  test_handlers.py  test_health.py  test_logging.py  test_main_app.py  test_moonshine_stt.py  test_openai_provider.py  test_parakeet_stt.py  test_provider_factory.py  test_providers.py  test_qwen_stt.py  test_qwen_stt_model.py  test_response_cache.py  test_screening_agent.py  test_settings.py  test_smart_routing.py  test_speaker_tracker.py  test_streaming_stt.py  test_summary_agent.py  test_transcript.py  test_websocket.py  test_whisper_stt.py
chrome_extension/: README.md  manifest.json  service-worker.js
chrome_extension/auth/: auth.js
chrome_extension/offscreen/: offscreen.html  offscreen.js
chrome_extension/popup/: history.js  i18n.js  popup.css  popup.html  popup.js
chrome_extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
docs/: BUSINESS_PLAN_2026.md  OPEN_SOURCE_GTM_STRATEGY_2026.md  ROADMAP_UI_UX.md  SCALABILITY.md  VISION_2026.md
flutter_app/: .fvmrc  README.md  analysis_options.yaml  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/ios/: Podfile
flutter_app/ios/Runner/: AppDelegate.swift  GoogleService-Info.plist  Info.plist  PrivacyInfo.xcprivacy  Products.storekit  SpeechAnalyzerPlugin.swift
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: main.dart
flutter_app/lib/config/: app_config.dart  router.dart  theme.dart
flutter_app/lib/l10n/: app_en.arb  app_es.arb  app_pt.arb
flutter_app/lib/models/: meeting_models.dart
flutter_app/lib/native/: whisper_bindings.dart
flutter_app/lib/providers/: auth_provider.dart  meeting_provider.dart  preferences_provider.dart  subscription_provider.dart
flutter_app/lib/services/: audio_service.dart  auth_service.dart  export_service.dart  meeting_api_service.dart  meeting_pdf_service.dart  model_manager.dart  notification_service.dart  permission_service.dart  speech_analyzer_service.dart  stt_service.dart  subscription_service.dart  user_preferences.dart  websocket_service.dart  whisper_stt_service.dart
flutter_app/native/: CMakeLists.txt
flutter_app/native/android/: CMakeLists.txt
flutter_app/native/src/: whisper_bridge.cpp  whisper_bridge.h
flutter_app/test/: widget_test.dart
flutter_app/web/: index.html  manifest.json
infra/: .gitignore  bedrock.tf  ec2.tf  ecr.tf  main.tf  ssm.tf  tfplan  variables.tf
infra/environments/production/: backend.tf  main.tf  outputs.tf  variables.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/database/: main.tf
infra/modules/dns/: main.tf
infra/modules/ecr/: main.tf
infra/modules/monitoring/: main.tf
infra/modules/networking/: main.tf
infra/modules/oidc/: main.tf  variables.tf
infra/modules/secrets/: main.tf
infra/modules/ses/: main.tf  outputs.tf  variables.tf
infra/modules/storage/: main.tf
scripts/: create_demo_account.sh  deploy.sh  ec2-start.sh  fix_remaining.py  quality-check.sh  setup_appstore.py  stt-smoke-test.py  tf-quality-check.sh
scripts/ci/: pipeline.py
website/: Dockerfile  README.md  astro.config.mjs  nginx.conf  package-lock.json
website/public/: robots.txt
website/public/fonts/: inter.css
website/src/components/: AnimatedDemo.astro  AppShowcase.astro  Benefits.astro  CTA.astro  CompareTable.astro  (+13 more)
(+155 files in other folders)
