[project]
name = "meetmind-backend"
version = "0.1.0"
description = "MeetMind Backend — AI-powered meeting assistant"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "boto3>=1.36.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "openai>=2.21.0",
    "soundfile>=0.13.0",
    "numpy>=1.26.0",
    "onnx-asr[cpu,hub]>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "boto3-stubs[bedrock-runtime]>=1.36.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/meetmind"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests
"src/meetmind/config/settings.py" = ["S104"]  # 0.0.0.0 binding is overridden by env

[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
